gcc/testsuite/rust/rustc/ui/resolve/resolve-conflict-item-vs-extern-crate.rs
fn std() {}
mod std {}    // { dg-error ".E0260." "" { target *-*-* } }

fn main() {
}

